[package]
name = "ostree-push"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
ostree-ext = "0.6.5"
hyper-staticfile = "0.9.2"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.6"
futures-util = "0.3.21"
anyhow = "1.0.56"
ssh2 = "0.9.3"